<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingshead"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/montserratmed"
        android:gravity="start"
        android:text="@string/customise"
        android:textSize="30sp" />

    <!--frame layout for displaying
        our preference fragment-->

    <ImageView
        android:id="@+id/wordsmithLogo"
        app:srcCompat="@drawable/wordsmith_logo"
        android:layout_width="154dp"
        android:layout_height="81dp"
        android:layout_marginStart="257dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/logo" />


    <FrameLayout
        android:id="@+id/list_container"
        android:layout_width="409dp"
        android:layout_height="405dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="98dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/homeButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/go_back_to_main"
        android:src="@drawable/ic_baseline_home_24"
        android:scaleType="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp" />


</RelativeLayout>